--- a/assets/css/HomePage_section2.css
+++ b/assets/css/HomePage_section2.css
@@ -5,23 +5,36 @@
   --press:#AE73EA;
 
 }
-
+.section2-container{
+  width: 100%;
+  height: 823px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+ margin: 0;
+ 
+ box-sizing: border-box;
+}
 .section2 {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  position: absolute;
+  /* position: absolute; */
   width: 1440px;
-  height: fit-content;
-  top: 900px;
+  height: 823px;
+
+  /* top: 900px; */
+  border: 1px red solid;
+  position: relative;
+
 }
 .video-background {
   width: 1440px;
-  height: 823;
+  height: 823px;
 }
 .video-background video {
   width: 100%;
@@ -35,6 +48,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  border: 1px red solid;
+
 }
 .p1 {
   position: absolute;
