--- a/assets/css/HomePage_section1.css
+++ b/assets/css/HomePage_section1.css
@@ -1,18 +1,20 @@
 @import url("https://fonts.cdnfonts.com/css/aileron");
-
-.home-section-one_container{
+@import url("https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@500;700&family=Dancing+Script:wght@500;600&display=swap");
+*{
+  box-sizing: border-box;
+}
+.home-section-one_container {
   width: 100%;
   height: 783px;
   text-align: center;
   display: flex;
   flex-direction: column;
   align-items: center;
- margin: 0;
- 
+  margin: 0;
 }
 .home-section-one {
   position: relative;
-  
+
   display: flex;
   flex-direction: column;
   align-items: left;
@@ -20,10 +22,8 @@
   max-width: 100%;
   height: 783px;
   border: 1px red solid;
- margin: 0;
-
+  margin: 0;
 }
-
 
 .main-title {
   width: 917px;
@@ -46,7 +46,6 @@
   z-index: 1;
   /* border: 1px red solid; */
   overflow: hidden;
-
 }
 
 .home-reclaim-logo {
@@ -59,15 +58,13 @@
   float: right;
   right: -120px;
   top: -170px;
-
 }
 
-.Home-page-sec1-paragraph p{
+.Home-page-sec1-paragraph p {
   margin: 0;
   padding: 0;
-
 }
-  .Home-page-sec1-paragraph{
+.Home-page-sec1-paragraph {
   /* position: absolute; */
   color: #4c6b5f;
   width: 829px;
@@ -85,7 +82,6 @@
   margin-top: 24px;
   margin-left: 80px;
   /* border: 1px red solid; */
-
 }
 
 .Home-page-sec1-learn-more-a {
@@ -95,7 +91,7 @@
   width: 378px;
   height: 95px;
 }
-  .Home-page-sec1-learn-more {
+.Home-page-sec1-learn-more {
   /* position: absolute; */
   width: 378px;
   height: 95px;
@@ -112,7 +108,6 @@
   font-weight: 500;
   line-height: 40px;
   margin: 0;
- 
 }
 
 .learn-more:hover {
@@ -130,36 +125,130 @@
   font-weight: 600;
 }
 
-
-
-
 /*Media queries*/
-@media screen and (max-width: 480px) {
-  .section-one {
-    width: 600px;
-    max-width: 100%;
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (max-width: 992px) {
+ 
+.home-section-one_container {
+  height: 724px;
+  max-width: 992px;
+  width: 100%;
+}
+.home-section-one {
+  max-width: 992px;
+  width: 100%;
+  height: 724px;
+  }
+
+  .main-title {
+    width: 688px;
+    height: 108px;
+    margin-top: 144px;
+    margin-left: 40px;
+    font-size: 90px;
+    letter-spacing: 4.05px;
+  }
+
+  .home-reclaim-logo {
+    position: absolute;
+    z-index: -1;
+    width: 808px;
+    height: 800px;
+    right: -180px;
+    top: -100px;
+  }
+
+
+  .Home-page-sec1-paragraph {
+    width: 652px;
+    height: 178px;
+    font-family: "Aileron";
+    font-size: 26px;
+    line-height: 35.5px;
+    letter-spacing: 1.177px;
+    margin-left: 40px;
+    /* border: 1px red solid; */
+  }
+
+  .Home-page-sec1-learn-more-a {
+    margin-top: 24px;
+    margin-left: 40px;
+    width: 359px;
+    height: 90px;
+  }
+  .Home-page-sec1-learn-more {
+    width: 359px;
+    height: 90px;
+    font-size: 42px;
+    line-height: normal;
+    /* letter-spacing: 1.89px; */
+    padding: 5px;
+  }
+
+  
+}
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+ 
+.home-section-one_container {
+  height: 666px;
+  max-width: 600px;
+  width: 100%;
+}
+.home-section-one {
+  max-width: 600px;
+  width: 100%;
+  height: 666px;
   }
 
   .main-title {
     width: 340px;
     height: 192px;
-    top: 130px;
-    left: 290px;
+    margin-top: 72px;
+    margin-left: 32px;
+    font-size: 80px;
+    letter-spacing: 3.6px;
+    text-align: left;
   }
-}
+  
 
-@media screen and (max-width: 768px) and (min-width: 481px) {
-  .main-title {
-    left: 150px;
+  .home-reclaim-logo {
+    position: absolute;
+    z-index: -1;
+    width: 508px;
+    height: 500px;
+    right: -120px;
+    top: -60px;
   }
 
-  .foter {
-    left: 100px;
-  }
-}
 
-@media screen and (max-width: 1048px) and (min-width: 769px) {
-  .main-title {
-    left: 130px;
+  .Home-page-sec1-paragraph {
+    width: 554px;
+    height: 170px;
+    font-size: 24px;
+    line-height: 33.6px;
+    letter-spacing: 1.08px;
+    margin-left: 32px;
+    /* border: 1px red solid; */
+    padding-left: 10px;
   }
+
+  .Home-page-sec1-learn-more-a {
+    margin-top: 40px;
+    margin-left: 32px;
+    width: 350px;
+    height: 88px;
+  }
+  .Home-page-sec1-learn-more {
+    width: 350px;
+    height: 88px;
+    font-size: 40px;
+    line-height: normal;
+    letter-spacing: 1.80px;
+    padding: 5px;
+  }
+
+  
 }
