--- a/assets/css/HomePage_section4.css
+++ b/assets/css/HomePage_section4.css
@@ -12,7 +12,8 @@
 
 .HM_section4 {
 
-  height: 909px;
+  min-height: 909px;
+  height:fit-content;
   width: 100%;
   text-align: center;
   display: flex;
@@ -20,7 +21,10 @@
   align-items: center;
   margin: 0;
 
-  box-sizing: border-box;}
+  box-sizing: border-box;
+
+margin-bottom: 10px;
+}
 
 
 .HM_4_content {
