--- a/assets/css/HomePage_section5.css
+++ b/assets/css/HomePage_section5.css
@@ -25,7 +25,7 @@
 }
 
 .HM_sec5_content {
-  border: red solid 2px;
+  /* border: red solid 2px; */
   margin: 0;
   padding: 0;
   position: relative;
@@ -69,7 +69,7 @@
   align-items: center;
   flex-direction: column;
   justify-content: space-between;
-  border: red solid 2px;
+  /* border: red solid 2px; */
 
 
 }
