--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -2,9 +2,9 @@
   margin: 0;
   padding: 0;
   position: relative;
-  top: 266em;
+  /* top: 266em; */
   bottom: 0;
-  width: 1440px;
+  width: 100%;
   height: 144px;
   flex-shrink: 0;
   display: flex;
