--- a/assets/css/HomePage_section2.css
+++ b/assets/css/HomePage_section2.css
@@ -106,6 +106,8 @@
   background-color: var(--hover);
   border-color: var(--hover);
   color: var(--sec2FontColor);
+  cursor: pointer;
+
 }
 
 
@@ -127,25 +129,187 @@
   font-size: 46px;
 }
 
-/* Style the button */
-#link-btn .learnBtn {
-  background-color: transparent;
-  border: 8px solid var(--sec2FontColor);
-  border-radius: 100px;
-  padding: 10px 30px;
-  text-align: center;
-  text-decoration: none;
-  color: inherit; /* Inherit color from the parent link */
+
+/*Media queries*/
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (max-width: 992px) {
+
+
+  .section2-container{
+   max-height: 863px;
+    height: fit-content;
+    
+  }
+  .section2 {
+    max-width: 992px;
+    width: 100%;
+    height: 863px;
+    height: fit-content;
+
+  }
+  .video-background {
+    max-width: 992px;
+    width: 100%;
+    max-height: 863px;
+    height: fit-content;
+    border: red solid 1px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+  }
+  .played-video{
+    height: 100%;
+  }
+ 
+  
+  
+  .p1 {
+    margin: 0;
+    padding: 0;
+    width: 592px;
+    height: 48px;
+    font-size: 40px;
+    top: 22px;
+    color: var(--sec2FontColor);
+    /* color: red; */
+  }
+  
+  .p2 {
+    margin: 0;
+    padding: 0;
+    width: 616px;
+    height: 108px;
+    font-weight: 700;
+    font-size: 90px;
+    top: 120px;
+    color: var(--sec2FontColor);
+
+  }
+  
+  .p3 {
+   margin: 0;
+   padding: 0;
+    width: 323px;
+    height: 96px;
+    font-size: 40px;
+    top: 260px;
+    color: var(--sec2FontColor);
+  }
+  .learnBtn {
+    width: 366px;
+    height: 90px;
+    font-size: 42px;
+    top: 400px;
+    color: var(--sec2FontColor);
+    background-color: transparent;
+    border: 8px var(--sec2FontColor) solid;
+    border-radius: 100px;
+  }
+  
+  .learnBtn:hover{
+    background-color: var(--hover);
+    border-color: var(--hover);
+    color: var(--sec2FontColor);
+  }
+  
+  
+  .learnBtn:active {
+    background-color: var(--press);
+    border-color: var(--press);
+    color: var(--sec2FontColor);
+  }
+  
+  /* Style the link and its container */
+  #link-btn {
+
+    font-size: 42px;
+  }
+  
+ 
 }
 
-/* Hover and active states */
-#link-btn:hover .learnBtn {
-  background-color: var(--hover);
-  border-color: var(--hover);
-  cursor: pointer;
-}
 
-#link-btn:active .learnBtn {
-  background-color: var(--press);
-  border-color: var(--press);
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+
+
+
+  
+
+  .section2-container{
+    max-height: 863px;
+     height: fit-content;
+     
+   }
+   .section2 {
+     max-width: 600px;
+     width: 100%;
+     height: 863px;
+     height: fit-content;
+ 
+   }
+   .video-background {
+     max-width: 600px;
+     width: 100%;
+     max-height: 863px;
+     height: fit-content;
+     display: flex;
+     justify-content: flex-start;
+     align-items: flex-start;
+   }
+   .played-video{
+     height: 100%;
+   }
+  
+   
+   
+   .p1 {
+     margin: 0;
+     padding: 0;
+     width: 444px;
+     height: 36px;
+     font-size: 20px;
+     top: 18px;
+   }
+   
+   .p2 {
+     margin: 0;
+     padding: 0;
+     width: 473px;
+     height: 192px;
+     font-weight: 700;
+     font-size: 50px;
+     top: 60px;
+ 
+   }
+   
+   .p3 {
+    margin: 0;
+    padding: 0;
+     width: 323px;
+     height: 96px;
+     font-size: 30px;
+     top: 130px;
+     color: var(--sec2FontColor);
+   }
+   .learnBtn {
+     width: 250px;
+     height: 60px;
+     font-size: 30px;
+     top: 240px;
+     color: var(--sec2FontColor);
+     background-color: transparent;
+     border: 8px var(--sec2FontColor) solid;
+     border-radius: 100px;
+   }
+   
+   /* Style the link and its container */
+   #link-btn {
+ 
+     font-size: 30px;
+   }
+   
+
 }
