--- a/assets/css/HomePage_section4.css
+++ b/assets/css/HomePage_section4.css
@@ -33,7 +33,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  border: green solid 2px;
+  /* border: green solid 2px; */
   width: 1440px;
   height: 100%;
   /* top: 200px; */
