--- a/assets/css/HomePage_section1.css
+++ b/assets/css/HomePage_section1.css
@@ -21,7 +21,7 @@
   width: 1440px;
   max-width: 100%;
   height: 783px;
-  border: 1px red solid;
+  /* border: 1px red solid; */
   margin: 0;
 }
 
