--- a/assets/css/HomePage_section2.css
+++ b/assets/css/HomePage_section2.css
@@ -153,7 +153,7 @@
     width: 100%;
     max-height: 863px;
     height: fit-content;
-    border: red solid 1px;
+    /* border: red solid 1px; */
     display: flex;
     justify-content: flex-start;
     align-items: flex-start;
