--- a/assets/css/aboutPageCss/aboutpage.css
+++ b/assets/css/aboutPageCss/aboutpage.css
@@ -2,7 +2,34 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items:center ;
     margin-bottom: 144px;
-    width: 1440px;
 }
+
+/*Media queries*/
+@media screen and (max-width: 480px) {
+
+    .aboutpage_snippestcontaiener {
+        width: 100%;
+        align-items: stretch;
+        
+    }
+
+    .about_sec1_title {
+        width: 410px;
+        height: 96px;
+        font-size: 80px;
+    }
+
+    .about_sec1_p1 {
+        font-size: 24px;
+        width: 418px;
+    }
+
+    
+  }
+
+  @media screen and (min-width: 1020px) {
+    .aboutpage_snippestcontaiener {
+        width: 1440px;
+        align-items: center;        
+    }  }
