--- a/assets/css/projectsPage/project_section1.css
+++ b/assets/css/projectsPage/project_section1.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@500;700;400;900;600&family=Dancing+Script:wght@500;600&display=swap");
 @import url("https://fonts.cdnfonts.com/css/aileron");
+
 .project_sec1 {
   width: 100%;
   height: 673px;
@@ -22,8 +23,13 @@
   justify-content: center;
   flex-direction: row;
   position: relative;
-  overflow: hidden;
+  /* overflow: hidden; */
   /* border: 1px red solid; */
+  /* border: 1px red solid; */
+}
+.imgsec1_pro_container{
+    width: 338px;
+  height: 738px;
 }
 .imgsec1_pro {
   position: absolute;
@@ -33,20 +39,23 @@
   left: -200px;
   top: -150px;
   object-fit: contain;
-  z-index: 100;
+  /* z-index: 100; */
   margin: 0;
   padding: 0;
 }
 .project_sec1_container_data {
+  /* border: 1px red solid; */
+
   margin: 0;
   padding: 0;
   width: 840px;
   height: 100%;
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   justify-content: center;
   flex-direction: column;
-  margin-left: 120px;
+  /* margin-left: 120px; */
+  z-index: 10;
 }
 .projects-section1-h1 {
   margin: 0;
@@ -118,8 +127,8 @@
     flex-direction: column;
     margin: 0;
     padding: 0;
-  margin-top: 50px;
-
+    margin-top: 50px;
+   
   }
 
   .project_sec1_container {
@@ -133,7 +142,8 @@
     justify-content: center;
     flex-direction: row;
     position: relative;
-    overflow: hidden;
+    padding: 10px;
+    /* overflow: hidden; */
     /* border: 1px red solid; */
   }
   .imgsec1_pro {
@@ -144,11 +154,12 @@
     left: -230px;
     top: -180px;
     object-fit: contain;
-    z-index: 100;
+    /* z-index: 100; */
     margin: 0;
     padding: 0;
   }
   .project_sec1_container_data {
+    /* border: 1px red solid; */
     margin: 0;
     padding: 0;
     width: 640px;
@@ -157,7 +168,8 @@
     align-items: flex-start;
     justify-content: center;
     flex-direction: column;
-    margin-left: 150px;
+    /* margin-left: 150px; */
+    
   }
   .projects-section1-h1 {
     margin: 0;
@@ -222,15 +234,15 @@
 @media only screen and (max-width: 600px) {
   .project_sec1 {
     width: 100%;
-    height: 600px;
+    min-height: 600px;
+    height: auto;
     display: flex;
     align-items: flex-start;
     justify-content: center;
     flex-direction: column;
     margin: 0;
     padding: 0;
-  margin-top: 50px;
-
+    margin-top: 50px;
   }
 
   .project_sec1_container {
@@ -244,7 +256,7 @@
     justify-content: center;
     flex-direction: row;
     position: relative;
-    overflow: hidden;
+    /* overflow: hidden; */
     /* border: 1px red solid; */
   }
   .imgsec1_pro {
@@ -255,20 +267,20 @@
     left: -280px;
     top: -280px;
     object-fit: contain;
-    z-index: 100;
+    /* z-index: 100; */
     margin: 0;
     padding: 0;
   }
   .project_sec1_container_data {
     margin: 0;
-    padding: 0;
-    width: 441px;
+    padding: 10px;
+    width: 100%;
     height: 100%;
     display: flex;
     align-items: flex-start;
     justify-content: center;
     flex-direction: column;
-    margin-left: 130px;
+    margin-left: 0;
     flex-wrap: wrap;
   }
   .projects-section1-h1 {
@@ -293,12 +305,12 @@
     line-height: 149%; /* 35.76px */
     /* margin-left: 335px; */
     margin-top: 24px;
-    width: 441px;
+    width: 100%;
   }
 
   .pro_sec1_btn {
     display: inline-flex;
-    padding: 20px 60px;
+    padding: 20px 40px;
     align-items: flex-start;
     gap: 10px;
     border-radius: 100px;
@@ -306,7 +318,7 @@
     color: #4c6b5f;
     margin-top: 48px;
     font-family: "Barlow Condensed";
-    font-size: 40px;
+    font-size: 36px;
     font-style: normal;
     font-weight: 500;
     line-height: normal;
@@ -315,7 +327,7 @@
   }
   .pro_sec1_btn:hover {
     display: inline-flex;
-    padding: 20px 60px;
+    padding: 20px 40px;
     align-items: flex-start;
     gap: 10px;
     border-radius: 100px;
