--- a/assets/css/HomePage_section4.css
+++ b/assets/css/HomePage_section4.css
@@ -120,11 +120,12 @@
 
 @media only screen and (max-width: 992px) {
   .HM_section4 {
-    min-height: 813px;
-    height: 813px;
+    min-height: 400px;
+    height: auto;
     width: 100%;
 
     margin-bottom: 10px;
+    padding: 70px 0;
   }
 
   .HM_4_content {
@@ -133,9 +134,10 @@
     height: 100%;
   }
   .HM_4_p1 {
-    width: 560px;
-    /* width: fit-content; */
-    height: 108px;
+    position: static;
+
+    width: 100%;
+    height: auto;
     font-size: 90px;
     /* left: 0; */
     line-height: normal;
@@ -144,31 +146,39 @@
   }
 
   .HM_4_p2 {
-    width: 706px;
-    height: 80px;
-
+    position: static;
+   
+    width: 100%;
+    height: auto;
     font-size: 26px;
-    top: 172px;
+    /* top: 172px; */
     line-height: 40px; /* 153.846% */
     letter-spacing: 1.17px;
+    padding:20px 5px;
   }
 
   .HM_4_teamImg {
+    position: static;
     width: 754.602px;
     height: 495.505px;
+    width: calc(100% * 754.602 / 992);
+    height:auto;
+
     flex-shrink: 0;
 
-    top: 264px;
+    /* top: 264px; */
     z-index: 2;
     border-radius: 100px;
   }
 
   .HM_4_learna {
-    position: absolute;
+    position: static;
     width: 359px;
     height: 90px;
-    top: 650px;
+    /* top: 650px; */
     z-index: 3;
+    margin-top: calc(100% * 100 / 992 *-1);
+
   }
   .HM_4_learnBtn {
     width: 359px;
@@ -183,11 +193,12 @@
 
 @media only screen and (max-width: 600px) {
   .HM_section4 {
-    min-height: 708px;
-    height: 708px;
+    /* min-height: 708px; */
+    height: auto;
     width: 100%;
 
-    margin-bottom: 10px;
+    /* margin-bottom: 10px; */
+    padding: 20px 0;
   }
 
   .HM_4_content {
@@ -196,20 +207,22 @@
     height: 100%;
   }
   .HM_4_p1 {
-    width: 497px;
+    /* width: 497px; */
     /* width: fit-content; */
-    height: 96px;
-    font-size: 80px;
+    width: 100%;
+    height: auto;
+    font-size: 70px;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
-    letter-spacing: 3.6px;
-    top: 48px;
+    letter-spacing: 2.6px;
+    /* top: 48px; */
   }
 
   .HM_4_p2 {
-    width: 515px;
-    height: 80px;
+    /* width: 515px; */
+    width: 100%;
+    height: auto;
 
     font-size: 24px;
     font-style: normal;
@@ -219,27 +232,30 @@
   }
 
   .HM_4_teamImg {
-    max-width: 600px;
+    /* max-width: 600px; */
     width: 100%;
-    height: 393.986px;
+    height: auto;
     flex-shrink: 0;
+    width: calc(100% - 10px);
 
     top: 264px;
     z-index: 2;
-    border-radius: 100px;
+    border-radius: 50px;
   }
 
   .HM_4_learna {
     position: absolute;
-    width: 350px;
-    height: 88px;
+    width: 250px;
+    height: 68px;
     top: 550px;
     z-index: 3;
+    margin-top: calc(100% * 80 / 600 *-1);
+
   }
   .HM_4_learnBtn {
-    width: 350px;
-    height: 88px;
-    font-size: 40px;
+    width: 250px;
+    height: 68px;
+    font-size: 30px;
     font-style: normal;
     font-weight: 500;
     line-height: normal;
