--- a/assets/css/HomePage_section5.css
+++ b/assets/css/HomePage_section5.css
@@ -19,8 +19,6 @@
 
   margin: 0;
 
-  
-
   box-sizing: border-box;
 }
 
@@ -115,19 +113,21 @@
   .HM_section5 {
     width: 100%;
     min-height: 618px;
-    height: fit-content;
+    height: auto;
   }
 
   .HM_sec5_content {
-    min-width: 992px;
+    max-width: 992px;
     width: 100%;
     min-height: 618px;
-    height: fit-content;
-
+    height: auto;
   }
   .HM_sec5_p1 {
-    width: 352px;
-    height: 108px;
+    /* width: 352px; */
+    width: 100%;
+
+    min-height: 108px;
+    height: auto;
     top: 112px;
 
     font-size: 90px;
@@ -138,7 +138,6 @@
   }
 
   .HM_sec5_p_container {
-   
     width: 520px;
     height: fit-content;
     font-size: 26px;
@@ -159,46 +158,50 @@
     top: 640px;
     z-index: 3;
   }
-
-  
 }
 
 @media only screen and (max-width: 600px) {
-
   .HM_section5 {
+    /* min-width: auto; */
     width: 100%;
     min-height: 572px;
-    height: fit-content;
+    height: auto;
   }
 
   .HM_sec5_content {
-    min-width: 600px;
+    max-width: 600px;
     width: 100%;
     min-height: 572px;
-    height: fit-content;
-
+    height: auto;
+    justify-content: flex-start;
   }
   .HM_sec5_p1 {
     width: 313px;
-    height: 96px;
+    height: auto;
+    width: calc(100% * 450 / 600);
     top: 48px;
     font-size: 80px;
     font-style: normal;
     font-weight: 600;
     line-height: normal;
     letter-spacing: 3.6px;
+    position: static;
+    margin-top: 48px;
   }
 
   .HM_sec5_p_container {
-   
     width: 520px;
-    height: fit-content;
+    width: calc(100% * 520 / 600);
+
+    height: auto;
     font-size: 24px;
-font-style: normal;
-font-weight: 400;
-line-height: normal;
-letter-spacing: 1.08px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: 1.08px;
     top: 207px;
+    position: static;
+    margin-top: 64px;
   }
   .HM_sec5_p_container p {
     margin: 0;
@@ -211,5 +214,4 @@ letter-spacing: 1.08px;
     top: 640px;
     z-index: 3;
   }
-
 }
