--- a/assets/css/projectsPage/project_section1.css
+++ b/assets/css/projectsPage/project_section1.css
@@ -19,7 +19,7 @@
   width: 1440px;
   height: 100%;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
   flex-direction: row;
   position: relative;
@@ -28,21 +28,26 @@
   /* border: 1px red solid; */
 }
 .imgsec1_pro_container{
-    width: 338px;
-  height: 738px;
+  /* position: absolute; */
+    width:calc(738px / 2) ;
+  height: calc(738px / 1.5);
+  background-color:#E3B74A ;
+  border-radius:0 0 100% 0;
+  top: 0;
+  left: 0;
+  z-index: -1;
 }
-.imgsec1_pro {
+
+/* .imgsec1_pro {
   position: absolute;
-  /* width: 338px; */
   height: 738px;
   flex-shrink: 0;
   left: -200px;
   top: -150px;
   object-fit: contain;
-  /* z-index: 100; */
   margin: 0;
   padding: 0;
-}
+} */
 .project_sec1_container_data {
   /* border: 1px red solid; */
 
@@ -146,18 +151,17 @@
     /* overflow: hidden; */
     /* border: 1px red solid; */
   }
-  .imgsec1_pro {
+  .imgsec1_pro_container{
     position: absolute;
-    /* width: 338px; */
-    height: 738px;
-    flex-shrink: 0;
-    left: -230px;
-    top: -180px;
-    object-fit: contain;
-    /* z-index: 100; */
-    margin: 0;
-    padding: 0;
+      width:calc(738px / 3) ;
+    height: calc(738px / 2);
+    background-color:#E3B74A ;
+    border-radius:0 0 100% 0;
+    top: 0;
+    left: 0;
+    z-index: -1;
   }
+  
   .project_sec1_container_data {
     /* border: 1px red solid; */
     margin: 0;
@@ -259,6 +263,17 @@
     /* overflow: hidden; */
     /* border: 1px red solid; */
   }
+  .imgsec1_pro_container{
+    position: absolute;
+      width:calc(738px / 5) ;
+    height: calc(738px / 2);
+    background-color:#E3B74A ;
+    border-radius:0 0 100% 0;
+    top: 0;
+    left: 0;
+    z-index: -1;
+  }
+  
   .imgsec1_pro {
     position: absolute;
     /* width: 338px; */
