--- a/assets/css/navReasponsive.css
+++ b/assets/css/navReasponsive.css
@@ -1,4 +1,7 @@
 
+body{
+    /* border: 1px red solid; */
+}
 @media only screen and (max-width:992px) {
     .header{
         height: auto;
@@ -9,9 +12,12 @@
 
     .header{
         height: auto;
+        flex-wrap: wrap;
+        gap: 20px;
     }
     .menu{
         width: 210px;
+        /* margin-left: 20px; */
     }
     .menu-links{
         padding: 0;
