--- a/assets/css/projectsPage/project_section1.css
+++ b/assets/css/projectsPage/project_section1.css
@@ -20,7 +20,7 @@
   height: 100%;
   display: flex;
   align-items: flex-start;
-  justify-content: center;
+  justify-content: flex-start;
   flex-direction: row;
   position: relative;
   /* overflow: hidden; */
@@ -56,7 +56,7 @@
   width: 840px;
   height: 100%;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
   flex-direction: column;
   /* margin-left: 120px; */
