--- a/assets/css/HomePage_section1.css
+++ b/assets/css/HomePage_section1.css
@@ -203,7 +203,7 @@
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
   .home-section-one_container {
-    height: 666px;
+    height: auto;
     max-width: 600px;
     width: 100%;
     margin-bottom: 10px;
@@ -264,11 +264,12 @@
     margin-left: 32px;
     width: 350px;
     height: 88px;
+    text-align: left;
   }
   .Home-page-sec1-learn-more {
-    width: 350px;
-    height: 88px;
-    font-size: 40px;
+    width: 250px;
+    height: 78px;
+    font-size: 34px;
     line-height: normal;
     letter-spacing: 1.8px;
     padding: 5px;
