Space in about page removed

--- a/assets/css/aboutPageCss/aboutpage.css
+++ b/assets/css/aboutPageCss/aboutpage.css
@@ -6,7 +6,7 @@
 }
 
 /*Media queries*/
-@media screen and (max-width: 480px) {
+@media only screen and (max-width: 480px) {
 
     .aboutpage_snippestcontaiener {
         width: 100%;
