--- a/assets/css/aboutPageCss/aboutPage_section1.css
+++ b/assets/css/aboutPageCss/aboutPage_section1.css
@@ -63,7 +63,7 @@
 }
 
 /*Media queries*/
-@media screen and (max-width: 480px) {
+@media only screen and (max-width: 480px) {
 
   .about_sec1_title {
     width: 410px;
