--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -2,9 +2,8 @@
   margin: 0;
   padding: 0;
   position: relative;
-
   bottom: 0;
-  width: 100%;
+  width: 1440px;
   height: 144px;
   flex-shrink: 0;
   display: flex;
